Fix horizontal scrolling issue

--- a/css/style.css
+++ b/css/style.css
@@ -451,7 +451,9 @@ pre {
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
-  margin-left: auto; }
+  margin-left: auto; 
+  box-sizing: border-box;
+  overflow-x: hidden;}
   @media (min-width: 576px) {
     .container {
       max-width: 540px; } }
